--- a/premium.html
+++ b/premium.html
@@ -30,7 +30,7 @@
         </div>
     </section>
 
-    <script>src = "featureflow.js" </script>
+    <script>src = "featureblitz.js" </script>
 </body>
 
 </html>
